<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.teamcomida.comida_0316.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_LoginScreen"
            app:destination="@+id/LoginScreen" />
        <action
            android:id="@+id/action_FirstFragment_to_RegisterScreen"
            app:destination="@id/RegisterScreen" />
    </fragment>
    <fragment
        android:id="@+id/LoginScreen"
        android:name="com.teamcomida.comida_0316.LoginScreen"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/screen_login">

        <action
            android:id="@+id/action_LoginScreen_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterScreen"
        android:name="com.teamcomida.comida_0316.RegisterScreen"
        android:label="@string/register_screen_label"
        tools:layout="@layout/activity_register_screen">
        <action
            android:id="@+id/action_RegisterScreen_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>